Fix issue with h2 - h6 article headings potentially being larger than title on mobile
- Also give a bit of extra space between article 'details' and title so easier
  to see distinction between the two 'sections'.

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -1139,6 +1139,35 @@ td.login-name {
         padding-top: 40px;
     }
 
+    .markdown-body h1,
+    .markdown-body h2,
+    .markdown-body h3,
+    .markdown-body h4,
+    .markdown-body h5,
+    .markdown-body h6 {
+        padding-left: 20px;
+    }
+
+    .markdown-body h2 {
+        font-size: 27px;
+    }
+
+    .markdown-body h3 {
+        font-size: 19px;
+    }
+
+    .markdown-body h4 {
+        font-size: 15px;
+    }
+
+    .markdown-body h5 {
+        font-size: 27px;
+    }
+
+    .markdown-body h6 {
+        font-size: 12px;
+    }
+
     .lead {
         font-size: 30px;
     }
